# bc-deloitte

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.db  README.md  configure-db.sh  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  setup.sql
gpapp/: asgi.py  settings.py  settings_pytest.py  urls.py  wsgi.py
gpapp/core/: admin.py  apps.py  route.py
gpapp/core/migrations/: 0001_add_base_models.py  0001_add_base_tables.py
gpapp/core/models/: __init__.py  coordinator.py  lesson.py  student.py  teacher.py  user.py
gpapp/core/permissions/: coordinator.py  student.py  teacher.py
gpapp/core/serializers/: coordinator.py  lesson.py  student.py  teacher.py  user.py
gpapp/core/views/: auth.py  coordinator.py  lesson.py  student.py  teacher.py  user.py
tests/: conftest.py
tests/integration/api/: test_coordinator.py  test_lesson.py  test_student.py  test_teacher.py  test_user.py
tests/integration/api/permissions/: test_coordinator.py  test_staff.py  test_student.py  test_teacher.py
tests/unit/entity/: test_coordinator.py  test_lesson.py  test_student.py  test_teacher.py
